index.html bir geliştirmei

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
     <h1>TE AMOOOO TE AMOOO MİO AMOR GATİNHA FOFİNHA LİNDA ESPOSA MAVİOSAAAA MY BABY
         <3</h1>
+        <p>asdasdsad</p>
         <img 
 </body>
 
